objects/Contact__x.object
<CustomObject>
    <externalDataSource>TSOrg_C2S_TSTask</externalDataSource>
    <externalName>Contact</externalName>
    <fields>
        <fullName>AccountId__c</fullName>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <externalDeveloperName>TE_Customer_Key_Id__c</externalDeveloperName>
        <label>Account</label>
        <length>255</length>
        <referenceTargetField>Account.TE_Customer_Key_Id__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TS Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>AssistantName__c</fullName>
        <externalDeveloperName>AssistantName</externalDeveloperName>
        <label>Assistant&apos;s Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssistantPhone__c</fullName>
        <externalDeveloperName>AssistantPhone</externalDeveloperName>
        <label>Asst. Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <externalDeveloperName>Birthdate</externalDeveloperName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Canadian_Opt_in_Opt_Out_Date_c__c</fullName>
        <externalDeveloperName>Canadian_Opt_in_Opt_Out_Date__c</externalDeveloperName>
        <label>Canadian Opt-in/Opt-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Canadian_Opt_in_Opt_out_c__c</fullName>
        <externalDeveloperName>Canadian_Opt_in_Opt_out__c</externalDeveloperName>
        <label>Canadian Opt-in/Opt-out</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opt-in</fullName>
                </value>
                <value>
                    <fullName>Opt-out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Type_c__c</fullName>
        <externalDeveloperName>Company_Type__c</externalDeveloperName>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Component Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Harness House</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Vendor Managed Inventory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Type_c__c</fullName>
        <externalDeveloperName>Contact_Type__c</externalDeveloperName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Contact</fullName>
                </value>
                <value>
                    <fullName>Lead Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerServiceRep_c__c</fullName>
        <externalDeveloperName>CustomerServiceRep__c</externalDeveloperName>
        <label>CustomerServiceRep</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MARK BLODGETT</fullName>
                </value>
                <value>
                    <fullName>JESSICA BLOOMINGDALE</fullName>
                </value>
                <value>
                    <fullName>Carolyn Faulkner</fullName>
                </value>
                <value>
                    <fullName>JUDITH GERBER</fullName>
                </value>
                <value>
                    <fullName>KIMBERLY HUELSMAN</fullName>
                </value>
                <value>
                    <fullName>HEIDI KAUFLIN</fullName>
                </value>
                <value>
                    <fullName>SARA LUCE</fullName>
                </value>
                <value>
                    <fullName>BEVERLY LYBROOK</fullName>
                </value>
                <value>
                    <fullName>ANNIE PARSLEY</fullName>
                </value>
                <value>
                    <fullName>TINA SLOAN</fullName>
                </value>
                <value>
                    <fullName>DIANA SPENCER</fullName>
                </value>
                <value>
                    <fullName>LISA VOSKUHL</fullName>
                </value>
                <value>
                    <fullName>MELISSA WATKINS</fullName>
                </value>
                <value>
                    <fullName>Rob Bisceglia</fullName>
                </value>
                <value>
                    <fullName>Ralf Belaschky</fullName>
                </value>
                <value>
                    <fullName>Pamela Heiss</fullName>
                </value>
                <value>
                    <fullName>Milena Maydenska</fullName>
                </value>
                <value>
                    <fullName>Lida Ponte</fullName>
                </value>
                <value>
                    <fullName>Claudia Roeder</fullName>
                </value>
                <value>
                    <fullName>Gertrud Romann</fullName>
                </value>
                <value>
                    <fullName>Andreas Scholz</fullName>
                </value>
                <value>
                    <fullName>Nicole Schuessler</fullName>
                </value>
                <value>
                    <fullName>Francesco Signorile</fullName>
                </value>
                <value>
                    <fullName>Catherine Stuhlmann</fullName>
                </value>
                <value>
                    <fullName>Beatrix Wessel</fullName>
                </value>
                <value>
                    <fullName>Nataliya Yunitskaya</fullName>
                </value>
                <value>
                    <fullName>Michael Zikeli</fullName>
                </value>
                <value>
                    <fullName>Letitia Schaapveld (UK)</fullName>
                </value>
                <value>
                    <fullName>Roberta Riboldi (Italy)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <externalDeveloperName>Department</externalDeveloperName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Contact Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EMEA_Opt_in_Opt_Out_Date_c__c</fullName>
        <externalDeveloperName>EMEA_Opt_in_Opt_Out_Date__c</externalDeveloperName>
        <label>EMEA Opt-in/Opt-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMEA_Opt_in_Opt_Out_c__c</fullName>
        <externalDeveloperName>EMEA_Opt_in_Opt_Out__c</externalDeveloperName>
        <label>EMEA Opt-in/Opt-Out</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opt-in</fullName>
                </value>
                <value>
                    <fullName>Opt-out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email2_c__c</fullName>
        <externalDeveloperName>Email2__c</externalDeveloperName>
        <label>Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmailBouncedDate__c</fullName>
        <externalDeveloperName>EmailBouncedDate</externalDeveloperName>
        <label>Email Bounced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailBouncedReason__c</fullName>
        <externalDeveloperName>EmailBouncedReason</externalDeveloperName>
        <label>Email Bounced Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalDeveloperName>Email</externalDeveloperName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <externalDeveloperName>Fax</externalDeveloperName>
        <label>Business Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <externalDeveloperName>FirstName</externalDeveloperName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <externalDeveloperName>HomePhone</externalDeveloperName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Import2_Id_c__c</fullName>
        <externalDeveloperName>Import2_Id__c</externalDeveloperName>
        <label>Import2 Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_c__c</fullName>
        <externalDeveloperName>Industry__c</externalDeveloperName>
        <label>Account Industry</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEmailBounced__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsEmailBounced</externalDeveloperName>
        <label>Is Email Bounced</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JigsawContactId__c</fullName>
        <externalDeveloperName>JigsawContactId</externalDeveloperName>
        <label>Jigsaw Contact ID</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jigsaw__c</fullName>
        <externalDeveloperName>Jigsaw</externalDeveloperName>
        <label>Data.com Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_c__c</fullName>
        <externalDeveloperName>Language__c</externalDeveloperName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>SQ</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AN</fullName>
                </value>
                <value>
                    <fullName>HY</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AV</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AY</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <externalDeveloperName>LastActivityDate</externalDeveloperName>
        <label>Last Activity</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastCURequestDate__c</fullName>
        <externalDeveloperName>LastCURequestDate</externalDeveloperName>
        <label>Last Stay-in-Touch Request Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastCUUpdateDate__c</fullName>
        <externalDeveloperName>LastCUUpdateDate</externalDeveloperName>
        <label>Last Stay-in-Touch Save Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <externalDeveloperName>LastName</externalDeveloperName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <externalDeveloperName>LeadSource</externalDeveloperName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>PIC</fullName>
                </value>
                <value>
                    <fullName>Sample Request</fullName>
                </value>
                <value>
                    <fullName>Campaign Form</fullName>
                </value>
                <value>
                    <fullName>Cannot be determined</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Te.com Contact Us</fullName>
                </value>
                <value>
                    <fullName>TE.com Registration</fullName>
                </value>
                <value>
                    <fullName>PIC Hot Lead</fullName>
                </value>
                <value>
                    <fullName>Te.com Document Download</fullName>
                </value>
                <value>
                    <fullName>Campaign Chat</fullName>
                </value>
                <value>
                    <fullName>Campaign Contact Us</fullName>
                </value>
                <value>
                    <fullName>Campaign Document Download</fullName>
                </value>
                <value>
                    <fullName>Te.com Chat</fullName>
                </value>
                <value>
                    <fullName>Campaign Registration</fullName>
                </value>
                <value>
                    <fullName>Request a Price</fullName>
                </value>
                <value>
                    <fullName>WeChat Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MailingAddress__c</fullName>
        <externalDeveloperName>MailingAddress</externalDeveloperName>
        <label>Mailing Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <externalDeveloperName>MailingCity</externalDeveloperName>
        <label>Mailing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <externalDeveloperName>MailingCountry</externalDeveloperName>
        <label>Mailing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingGeocodeAccuracy__c</fullName>
        <externalDeveloperName>MailingGeocodeAccuracy</externalDeveloperName>
        <label>Mailing Geocode Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MailingLatitude__c</fullName>
        <externalDeveloperName>MailingLatitude</externalDeveloperName>
        <label>Mailing Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailingLongitude__c</fullName>
        <externalDeveloperName>MailingLongitude</externalDeveloperName>
        <label>Mailing Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <externalDeveloperName>MailingPostalCode</externalDeveloperName>
        <label>Mailing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <externalDeveloperName>MailingState</externalDeveloperName>
        <label>Mailing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <externalDeveloperName>MailingStreet</externalDeveloperName>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_list_c__c</fullName>
        <externalDeveloperName>Mailing_list__c</externalDeveloperName>
        <label>Mailing list</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EML</fullName>
                </value>
                <value>
                    <fullName>GML</fullName>
                </value>
                <value>
                    <fullName>Only Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Major_market_c__c</fullName>
        <externalDeveloperName>Major_market__c</externalDeveloperName>
        <label>Major market</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Agriculture - Turf Care</fullName>
                </value>
                <value>
                    <fullName>Alternative Power</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Aviation</fullName>
                </value>
                <value>
                    <fullName>Bus</fullName>
                </value>
                <value>
                    <fullName>Components</fullName>
                </value>
                <value>
                    <fullName>Components - Engines</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Distribution/Wholesale</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Fire/Rescue</fullName>
                </value>
                <value>
                    <fullName>Food/Beverage</fullName>
                </value>
                <value>
                    <fullName>Forestry</fullName>
                </value>
                <value>
                    <fullName>Generators</fullName>
                </value>
                <value>
                    <fullName>Harness House</fullName>
                </value>
                <value>
                    <fullName>Healthcare/Medical</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Lifts/Equipment Handling</fullName>
                </value>
                <value>
                    <fullName>Lighting</fullName>
                </value>
                <value>
                    <fullName>Major market</fullName>
                </value>
                <value>
                    <fullName>Marine</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Motorcycle</fullName>
                </value>
                <value>
                    <fullName>Natural Resources</fullName>
                </value>
                <value>
                    <fullName>Public Works</fullName>
                </value>
                <value>
                    <fullName>Racing</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
                <value>
                    <fullName>Rail - Locomotive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MasterRecordId__c</fullName>
        <externalDeveloperName>MasterRecordId</externalDeveloperName>
        <label>Master Record ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <externalDeveloperName>MobilePhone</externalDeveloperName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Full Name</label>
        <length>121</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherAddress__c</fullName>
        <externalDeveloperName>OtherAddress</externalDeveloperName>
        <label>Other Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OtherCity__c</fullName>
        <externalDeveloperName>OtherCity</externalDeveloperName>
        <label>Other City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherCountry__c</fullName>
        <externalDeveloperName>OtherCountry</externalDeveloperName>
        <label>Other Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherGeocodeAccuracy__c</fullName>
        <externalDeveloperName>OtherGeocodeAccuracy</externalDeveloperName>
        <label>Other Geocode Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtherLatitude__c</fullName>
        <externalDeveloperName>OtherLatitude</externalDeveloperName>
        <label>Other Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherLongitude__c</fullName>
        <externalDeveloperName>OtherLongitude</externalDeveloperName>
        <label>Other Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherPhone__c</fullName>
        <externalDeveloperName>OtherPhone</externalDeveloperName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OtherPostalCode__c</fullName>
        <externalDeveloperName>OtherPostalCode</externalDeveloperName>
        <label>Other Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherState__c</fullName>
        <externalDeveloperName>OtherState</externalDeveloperName>
        <label>Other State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherStreet__c</fullName>
        <externalDeveloperName>OtherStreet</externalDeveloperName>
        <label>Other Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <externalDeveloperName>Phone</externalDeveloperName>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PhotoUrl__c</fullName>
        <externalDeveloperName>PhotoUrl</externalDeveloperName>
        <label>Photo URL</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Rating_c__c</fullName>
        <externalDeveloperName>Rating__c</externalDeveloperName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportsToId__c</fullName>
        <externalDeveloperName>ReportsToId</externalDeveloperName>
        <label>Reports To ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <externalDeveloperName>Salutation</externalDeveloperName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
                <value>
                    <fullName>Mdme</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SourceDetails_c__c</fullName>
        <externalDeveloperName>SourceDetails__c</externalDeveloperName>
        <label>SourceDetails</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_c__c</fullName>
        <externalDeveloperName>Source__c</externalDeveloperName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ads-Print</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Email Marketing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Search Engine</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TE_Customer_Key_Id_c__c</fullName>
        <externalDeveloperName>TE_Customer_Key_Id__c</externalDeveloperName>
        <label>TE Customer Key Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>